🐛 fix: slider fade in issues on safari

--- a/src/components/ProjectSlide.module.scss
+++ b/src/components/ProjectSlide.module.scss
@@ -28,20 +28,10 @@
   &.contentIsVisible {
     .imageCol img,
     .content {
-      animation: fadeIn 0.5s ease 0.35s forwards;
+      opacity: 1;
+      transition: all 0.5s ease 0.35s;
+      transform: translateY(0);
     }
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
 
@@ -87,6 +77,7 @@
 .imageCol img,
 .content {
   opacity: 0;
+  transform: translateY(20px);
 }
 
 .headline {
